# fuzio-game-contracts

./: Cargo.toml  README.md
artifacts/: checksums.txt  checksums_intermediate.txt  fuzio_option_trading.wasm  fuzio_prediction_game.wasm
contracts/fast_oracle/: Cargo.toml
contracts/fast_oracle/examples/: schema.rs
contracts/fast_oracle/schema/: fuzio_fast_oracle.json
contracts/fast_oracle/schema/raw/: execute.json  query.json
contracts/fast_oracle/src/: contract.rs  error.rs  state.rs
contracts/fuzio_option_trading/: Cargo.toml  README.md
contracts/fuzio_option_trading/examples/: schema.rs
contracts/fuzio_option_trading/schema/: fuzio_option_trading.json
contracts/fuzio_option_trading/schema/raw/: execute.json  instantiate.json  query.json  response_to_config.json  response_to_finished_round.json  response_to_status.json
contracts/fuzio_option_trading/src/: contract.rs  error.rs  lib.rs  state.rs
contracts/fuzio_option_trading/src/testing/: tests.rs
contracts/fuzio_prediction_game/: Cargo.toml  README.md
contracts/fuzio_prediction_game/examples/: schema.rs
contracts/fuzio_prediction_game/schema/: fuzio_prediction_game.json
contracts/fuzio_prediction_game/schema/raw/: query.json
contracts/fuzio_prediction_game/src/: contract.rs  error.rs  lib.rs  state.rs
