[workspace]
members = [
    "packages/*",
    "contracts/*"
]

[workspace.package]
version       = "0.1.0"
edition       = "2021"
repository    = "https://github.com/Fuzio-DeFi-Network/Fuzio-OptionsTrading-SC"
rust-version  = "1.68.1"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
