[package]
name = "fuzio_option_trading"
version = "1.0.0"
edition = "2018"
description = "Cosmwasm AMM"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw0 = {  version = "0.10.3" }
cw2 = { version = "1.0.1" }
cosmwasm-std = { version = "1.2.5" }
cosmwasm-storage = { version = "1.2.5" }
cw-storage-plus = { version = "1.0.1" }
schemars = "0.8.12"
serde = { version = "1.0.163", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.40" }
fuzio-bet = { path = "../../packages/fuzio-bet" }
sei-cosmwasm = "0.4.10"

[dev-dependencies]
cosmwasm-schema = { version = "1.2.5" }
